[gd_scene load_steps=27 format=3 uid="uid://r3efw26mbg4"]

[ext_resource type="Script" path="res://resources/scenes/nelix_game/components/ui/mainmenu/main_menu.gd" id="1_oir5h"]
[ext_resource type="Texture2D" uid="uid://cfiqkrd4kh6pa" path="res://resources/scenes/nelix_game/sprites/ui/bk.png" id="2_7t33q"]
[ext_resource type="Texture2D" uid="uid://buybd2oa5wk8s" path="res://resources/scenes/nelix_game/sprites/ui/play/play-p.png" id="3_25xs6"]
[ext_resource type="StyleBox" uid="uid://cdqeb6xduuu26" path="res://resources/nelixwindow.tres" id="3_k8uv0"]
[ext_resource type="Texture2D" uid="uid://cnkv4gtputj74" path="res://resources/scenes/nelix_game/sprites/ui/headers/nelix.png" id="3_rwtxq"]
[ext_resource type="Texture2D" uid="uid://d35oelh1lo4bl" path="res://resources/scenes/nelix_game/sprites/ui/options/sets.png" id="4_ciki8"]
[ext_resource type="Texture2D" uid="uid://cktbt6pfj0cad" path="res://resources/scenes/nelix_game/sprites/ui/play/play_n.png" id="4_n3u2q"]
[ext_resource type="Texture2D" uid="uid://b1n1tht150gw" path="res://resources/scenes/nelix_game/sprites/ui/play/play-h.png" id="6_2wysh"]
[ext_resource type="Texture2D" uid="uid://dweyrm5ypbdwe" path="res://resources/scenes/nelix_game/sprites/ui/options/options-p.png" id="6_jsfkw"]
[ext_resource type="Shader" path="res://resources/shaders/crt_postprocess.gdshader" id="7_4tvs5"]
[ext_resource type="Texture2D" uid="uid://vlwc2nt0ro0a" path="res://resources/scenes/nelix_game/sprites/ui/options/options_n.png" id="7_t7iwu"]
[ext_resource type="Texture2D" uid="uid://cqghawdqj1pad" path="res://resources/scenes/nelix_game/sprites/ui/options/options-h.png" id="9_4jk7m"]
[ext_resource type="Texture2D" uid="uid://55ld3nonqtij" path="res://resources/scenes/nelix_game/sprites/ui/quit/quit-p.png" id="10_6i6ok"]
[ext_resource type="Texture2D" uid="uid://bvym5m71fk2jt" path="res://resources/scenes/nelix_game/sprites/ui/options/sets_p.png" id="11_frywe"]
[ext_resource type="Texture2D" uid="uid://pq6m13dxfvpb" path="res://resources/scenes/nelix_game/sprites/ui/quit/quit_n.png" id="14_vwvfy"]
[ext_resource type="Shader" path="res://resources/shaders/glitch-effect.gdshader" id="15_8sfbr"]
[ext_resource type="Texture2D" uid="uid://bph5nnssbwqjl" path="res://resources/scenes/nelix_game/sprites/ui/headers/configs.png" id="15_563vt"]
[ext_resource type="Texture2D" uid="uid://divmsii5acjr8" path="res://resources/scenes/nelix_game/sprites/ui/quit/quit-h.png" id="15_bues7"]
[ext_resource type="Texture2D" uid="uid://dis1j3rgmktgy" path="res://resources/scenes/nelix_game/sprites/ui/back/back_n.png" id="16_qy3h8"]
[ext_resource type="Texture2D" uid="uid://bxulre1cni4oh" path="res://resources/scenes/nelix_game/sprites/ui/back/back_p.png" id="17_sqe4n"]
[ext_resource type="Texture2D" uid="uid://cx8pumpb0vfdd" path="res://resources/scenes/nelix_game/sprites/ui/back/back_h.png" id="18_xok6r"]
[ext_resource type="Texture2D" uid="uid://u37075llycfy" path="res://resources/sprites/UItileset.png" id="21_0ig4b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e3v1o"]
bg_color = Color(0.0352941, 0.0392157, 0.0784314, 1)
anti_aliasing = false

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_spgtq"]
texture = ExtResource("21_0ig4b")
texture_margin_left = 20.3692
texture_margin_top = 46.5057
texture_margin_right = 43.7657
texture_margin_bottom = 38.8286
region_rect = Rect2(48, 48, 49.863, 49.73)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tydy7"]
shader = ExtResource("7_4tvs5")
shader_parameter/overlay = true
shader_parameter/scanlines_opacity = 0.4
shader_parameter/scanlines_width = 0.25
shader_parameter/grille_opacity = 0.3
shader_parameter/resolution = Vector2(640, 480)
shader_parameter/pixelate = false
shader_parameter/roll = true
shader_parameter/roll_speed = 2.0
shader_parameter/roll_size = 15.0
shader_parameter/roll_variation = 1.8
shader_parameter/distort_intensity = 0.0
shader_parameter/noise_opacity = 0.241
shader_parameter/noise_speed = 5.0
shader_parameter/static_noise_intensity = 0.06
shader_parameter/aberration = -0.02
shader_parameter/brightness = 1.4
shader_parameter/discolor = true
shader_parameter/warp_amount = 0.909
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 0.5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2ph5t"]
shader = ExtResource("15_8sfbr")
shader_parameter/shake_power = 0.03
shader_parameter/shake_rate = 0.2
shader_parameter/shake_speed = 5.0
shader_parameter/shake_block_size = 30.5
shader_parameter/shake_color_rate = 0.01

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oir5h")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1152.0
offset_right = 2304.0
offset_bottom = 648.0
texture = ExtResource("2_7t33q")

[node name="Background panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
theme_override_styles/panel = SubResource("StyleBoxFlat_e3v1o")

[node name="window2" type="Panel" parent="."]
visible = false
texture_filter = 1
layout_mode = 0
offset_left = 712.0
offset_top = 104.0
offset_right = 852.0
offset_bottom = 216.0
scale = Vector2(2, 2)
theme_override_styles/panel = SubResource("StyleBoxTexture_spgtq")

[node name="window" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 200.0
offset_top = 200.0
offset_right = 348.0
offset_bottom = 312.0
scale = Vector2(2, 2)
theme_override_styles/panel = ExtResource("3_k8uv0")

[node name="Main" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="MainContainer" type="VBoxContainer" parent="Main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -57.0
offset_right = 32.0
offset_bottom = 57.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
pivot_offset = Vector2(32, 57)
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Logo" type="TextureRect" parent="Main/MainContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("3_rwtxq")

[node name="play" type="TextureButton" parent="Main/MainContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("4_n3u2q")
texture_pressed = ExtResource("3_25xs6")
texture_hover = ExtResource("6_2wysh")

[node name="options" type="TextureButton" parent="Main/MainContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("7_t7iwu")
texture_pressed = ExtResource("6_jsfkw")
texture_hover = ExtResource("9_4jk7m")

[node name="configstittle" type="TextureButton" parent="Main/MainContainer/options"]
layout_mode = 0
offset_left = -1.66667
offset_top = -67.0
offset_right = 9.33333
offset_bottom = -56.0
texture_normal = ExtResource("4_ciki8")
texture_pressed = ExtResource("11_frywe")

[node name="quit" type="TextureButton" parent="Main/MainContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("14_vwvfy")
texture_pressed = ExtResource("10_6i6ok")
texture_hover = ExtResource("15_bues7")

[node name="Settings" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="SettingsContainer" type="VBoxContainer" parent="Settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.5
offset_top = -57.0
offset_right = 42.5
offset_bottom = 57.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
pivot_offset = Vector2(42.5, 57)
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Logo" type="TextureRect" parent="Settings/SettingsContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("15_563vt")

[node name="play" type="TextureButton" parent="Settings/SettingsContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("4_n3u2q")
texture_pressed = ExtResource("3_25xs6")
texture_hover = ExtResource("6_2wysh")

[node name="back" type="TextureButton" parent="Settings/SettingsContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("16_qy3h8")
texture_pressed = ExtResource("17_sqe4n")
texture_hover = ExtResource("18_xok6r")

[node name="crt" type="ColorRect" parent="."]
clip_children = 1
material = SubResource("ShaderMaterial_tydy7")
layout_mode = 2
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="crt"]
material = SubResource("ShaderMaterial_2ph5t")
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="pressed" from="Main/MainContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Main/MainContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Main/MainContainer/options/configstittle" to="." method="_on_configstittle_pressed"]
[connection signal="pressed" from="Main/MainContainer/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Settings/SettingsContainer/back" to="." method="_on_back_pressed"]
